--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/NadiaRom/state_per_word#readme",
   "dependencies": {
+    "chroma-js": "^2.0.2",
     "d3": "^5.7.0",
     "jquery": "^3.3.1",
     "tippy.js": "^3.3.0"
